Bug 997992 - Fix build error on non ion builds. r=jandem, a=lsblakk